--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
-        />  
+        />
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
+
     <body>
         <header class="page-header">
             <div class="container container-nav">
@@ -539,15 +540,64 @@
                         </li>
                     </ul>
                 </div>
+                <form class="footer-form">
+                    <p class="footer-text">Подпишитесь на рассылку</p>
+                    <div class="footer-form-inner">
+                        <input type="email" name="email" placeholder="E-mail" />
+                        <button class="btn footer-btn" type="submit">
+                            Подписаться
+                            <svg class="icon-follow" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
             </div>
         </footer>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button class="modal-close-btn" data-modal-close>
-                    <svg class="icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-close-black"></use>
-                    </svg>
-                </button>
+                <form class="modal-form">
+                    <button class="modal-close-btn" data-modal-close>
+                        <svg class="icon close-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-close-black"></use>
+                        </svg>
+                    </button>
+                    <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+                    <label class="form-field"
+                        >Имя
+                        <input type="text" name="name" placeholder=" " />
+                        <svg class="icon icon-form" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person-form"></use>
+                        </svg>
+                    </label>
+                    <label class="form-field"
+                        >Телефон <input type="tel" name="tel" id="tel" placeholder=" " />
+                        <svg class="icon icon-form" width="18" height="18">
+                            <use href="./images/icons.svg#icon-phone-form"></use>
+                        </svg>
+                    </label>
+                    <label class="form-field">
+                        Почта <input type="email" name="email" id="email" placeholder=" " />
+                        <svg class="icon icon-form" width="18" height="18">
+                            <use href="./images/icons.svg#icon-email-form"></use>
+                        </svg>
+                    </label>
+                    <label class="form-field textarea"
+                        >Комментарий<textarea
+                            name="comment"
+                            rows="10"
+                            placeholder="Введите текст"
+                        ></textarea>
+                    </label>
+                    <label class="terms">
+                        <input  class="visually-hidden" type="checkbox" name="checkbox" />
+                        <svg class="icon" width="16" height="15">
+                            <use href="images/icons.svg#icon-check"></use></svg>
+                        Соглашаюсь с рассылкой и принимаю
+                        <a class="terms-link" href="#">Условия договора</a>
+                    </label>
+                <button class="btn modal-btn" type="submit">Отправить</button>
+                </form>
             </div>
         </div>
         <script src="./js/modal.js"></script>
