--- a/index.html
+++ b/index.html
@@ -591,10 +591,14 @@
                     </label>
                     <label class="terms">
                         <input  class="visually-hidden" type="checkbox" name="checkbox" />
-                        <svg class="icon" width="16" height="15">
-                            <use href="images/icons.svg#icon-check"></use></svg>
-                        Соглашаюсь с рассылкой и принимаю
-                        <a class="terms-link" href="#">Условия договора</a>
+                       
+                            <svg class="icon checkbox-icon" width="16" height="15">
+                                <use href="images/icons.svg#icon-checkbox"></use>
+                            </svg>
+                            <svg class="icon check" width="16" height="15">
+                                <use href="images/icons.svg#icon-check"></use>
+                            </svg>
+                        Соглашаюсь с рассылкой и принимаю&nbsp;<a class="terms-link" href="#">Условия договора</a>
                     </label>
                 <button class="btn modal-btn" type="submit">Отправить</button>
                 </form>
