--- a/portfolio.html
+++ b/portfolio.html
@@ -299,29 +299,18 @@
         <footer class="footer" id="footer">
             <div class="container footer-container">
                 <div class="footer-inner">
-                    <a href="./index.html" class="logo-footer logo" lang="en"
-                        >Web<span class="logo-light">Studio</span></a
-                    >
+                    <a href="./index.html" class="logo-footer logo" lang="en">Web<span class="logo-light">Studio</span></a>
                     <address class="address">
                         <ul class="footer-contacts">
                             <li class="footer-contacts-item">
-                                <a
-                                    class="footer-contacts-link footer-white-link"
-                                    href="https://goo.gl/maps/MPY8tiYrMEpFKNov8"
-                                    target="_blank"
-                                    rel="noopener noreferrer nofollow"
-                                    >г. Киев, пр-т Леси Украинки, 26</a
-                                >
+                                <a class="footer-contacts-link footer-white-link" href="https://goo.gl/maps/MPY8tiYrMEpFKNov8"
+                                    target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a>
                             </li>
                             <li class="footer-contacts-item">
-                                <a class="footer-contacts-link link" href="mailto:info@example.com"
-                                    >info@example.com</a
-                                >
+                                <a class="footer-contacts-link link" href="mailto:info@example.com">info@example.com</a>
                             </li>
                             <li class="footer-contacts-item">
-                                <a class="footer-contacts-link link" href="tel:+380961111111"
-                                    >+38 096 111 11 11</a
-                                >
+                                <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                             </li>
                         </ul>
                     </address>
@@ -330,48 +319,32 @@
                     <p class="footer-text">Присоединяйтесь</p>
                     <ul class="footer-icons-list">
                         <li class="footer-icons-item">
-                            <a
-                                class="footer-icons-link"
-                                href="https://www.instagram.com/"
-                                target="_blank"
-                                rel="noopener noreferrer nofollow"
-                            >
+                            <a class="footer-icons-link" href="https://www.instagram.com/" target="_blank"
+                                rel="noopener noreferrer nofollow">
                                 <svg class="icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-icons-item">
-                            <a
-                                class="footer-icons-link"
-                                href="https://twitter.com/"
-                                target="_blank"
-                                rel="noopener noreferrer nofollow"
-                            >
+                            <a class="footer-icons-link" href="https://twitter.com/" target="_blank"
+                                rel="noopener noreferrer nofollow">
                                 <svg class="icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-icons-item">
-                            <a
-                                class="footer-icons-link"
-                                href="https://www.facebook.com/"
-                                target="_blank"
-                                rel="noopener noreferrer nofollow"
-                            >
+                            <a class="footer-icons-link" href="https://www.facebook.com/" target="_blank"
+                                rel="noopener noreferrer nofollow">
                                 <svg class="icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-icons-item">
-                            <a
-                                class="footer-icons-link"
-                                href="https://www.linkedin.com/"
-                                target="_blank"
-                                rel="noopener noreferrer nofollow"
-                            >
+                            <a class="footer-icons-link" href="https://www.linkedin.com/" target="_blank"
+                                rel="noopener noreferrer nofollow">
                                 <svg class="icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -379,6 +352,18 @@
                         </li>
                     </ul>
                 </div>
+                <form class="footer-form">
+                    <p class="footer-text">Подпишитесь на рассылку</p>
+                    <div class="footer-form-inner">
+                        <input type="email" name="email" placeholder="E-mail" />
+                        <button class="btn footer-btn" type="submit">
+                            Подписаться
+                            <svg class="icon-follow" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
             </div>
         </footer>
     </body>
